<?xml version="1.0"?>
<package format="2">
  <name>package00000509</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000186</depend>
  <depend>package00000101</depend>
  <depend>package00000038</depend>
  <depend>package00000192</depend>
  <depend>package00000047</depend>
  <depend>package00000238</depend>
  <depend>package00000239</depend>
  <build_depend>package00000002</build_depend>
</package>
