<?xml version="1.0"?>
<package format="2">
  <name>package00000510</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <exec_depend>package00000511</exec_depend>
  <exec_depend>package00000512</exec_depend>
  <exec_depend>package00000513</exec_depend>
  <exec_depend>package00000514</exec_depend>
  <exec_depend>package00000515</exec_depend>
  <exec_depend>package00000516</exec_depend>
  <exec_depend>package00000517</exec_depend>
  <exec_depend>package00000518</exec_depend>
  <exec_depend>package00000519</exec_depend>
  <exec_depend>package00000520</exec_depend>
  <exec_depend>package00000461</exec_depend>
  <exec_depend>package00000521</exec_depend>
  <exec_depend>package00000484</exec_depend>
  <exec_depend>package00000522</exec_depend>
  <exec_depend>package00000523</exec_depend>
  <exec_depend>package00000524</exec_depend>
</package>
