<?xml version="1.0"?>
<package format="2">
  <name>package00000512</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000047</depend>
  <depend>package00000091</depend>
  <depend>package00000676</depend>
  <depend>package00000283</depend>
  <depend>package00000217</depend>
  <depend>package00000238</depend>
  <depend>package00000191</depend>
  <depend>package00000218</depend>
  <depend>package00000042</depend>
  <depend>package00000349</depend>
  <depend>package00000350</depend>
  <depend>package00000415</depend>
  <depend>package00000291</depend>
  <depend>package00000128</depend>
</package>
