<?xml version="1.0"?>
<package format="2">
  <name>package00000514</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <buildtool_depend>package00000101</buildtool_depend>
</package>
