<?xml version="1.0"?>
<package format="2">
  <name>package00000649</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <build_depend>package00000091</build_depend>
</package>
