<?xml version="1.0"?>
<package format="2">
  <name>package00000693</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000091</depend>
  <depend>package00000694</depend>
  <depend>package00000695</depend>
  <depend>package00000696</depend>
</package>
