<?xml version="1.0"?>
<package format="2">
  <name>package00001203</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000093</depend>
  <build_depend>package00000002</build_depend>
  <build_depend>package00000094</build_depend>
  <build_depend>package00000021</build_depend>
</package>
