<?xml version="1.0"?>
<package format="2">
  <name>package00001338</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000093</depend>
  <depend>package00001339</depend>
  <build_depend>package00000021</build_depend>
  <build_depend>package00000416</build_depend>
</package>
