<?xml version="1.0"?>
<package format="2">
  <name>package00000498</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000091</depend>
  <depend>package00000186</depend>
  <depend>package00001236</depend>
  <depend>package00001211</depend>
  <depend>package00001266</depend>
  <depend>package00001261</depend>
  <depend>package00001210</depend>
  <depend>package00000286</depend>
  <depend>package00001231</depend>
  <depend>package00000191</depend>
  <depend>package00000218</depend>
  <depend>package00000216</depend>
  <depend>package00000220</depend>
  <depend>package00000329</depend>
  <depend>package00000718</depend>
  <depend>package00000199</depend>
  <depend>package00000200</depend>
  <depend>package00000654</depend>
  <depend>package00000350</depend>
  <depend>package00001232</depend>
  <depend>package00001207</depend>
  <depend>package00000653</depend>
  <depend>package00000289</depend>
  <depend>package00001212</depend>
  <depend>package00001227</depend>
  <depend>package00000290</depend>
  <depend>package00000439</depend>
  <depend>package00000185</depend>
  <depend>package00000128</depend>
  <depend>package00001264</depend>
  <depend>package00001260</depend>
  <depend>package00000320</depend>
  <depend>package00001220</depend>
  <depend>package00000438</depend>
  <depend>package00001249</depend>
  <depend>package00000067</depend>
  <depend>package00001229</depend>
  <build_depend>package00000002</build_depend>
  <build_depend>package00000189</build_depend>
  <exec_depend>package00000344</exec_depend>
</package>
