<?xml version="1.0"?>
<package format="2">
  <name>package00000518</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <exec_depend>package00000675</exec_depend>
  <exec_depend>package00000718</exec_depend>
  <exec_depend>package00000498</exec_depend>
  <exec_depend>package00000794</exec_depend>
  <exec_depend>package00000529</exec_depend>
  <exec_depend>package00000280</exec_depend>
  <exec_depend>package00000190</exec_depend>
  <exec_depend>package00001291</exec_depend>
  <exec_depend>package00000536</exec_depend>
  <exec_depend>package00000537</exec_depend>
  <exec_depend>package00000276</exec_depend>
</package>
