<?xml version="1.0"?>
<package format="2">
  <name>package00000466</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000033</depend>
  <depend>package00000148</depend>
  <depend>package00000386</depend>
  <depend>package00000090</depend>
  <depend>package00000350</depend>
  <depend>package00000128</depend>
  <depend>package00001044</depend>
  <build_depend>package00000002</build_depend>
</package>
