<?xml version="1.0"?>
<package format="2">
  <name>package00001027</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000091</depend>
  <depend>package00000218</depend>
  <depend>package00000042</depend>
  <depend>package00000219</depend>
  <depend>package00000220</depend>
  <depend>package00000210</depend>
  <depend>package00000216</depend>
  <depend>package00000350</depend>
  <depend>package00000185</depend>
  <build_depend>package00000002</build_depend>
  <exec_depend>package00000410</exec_depend>
</package>
