<?xml version="1.0"?>
<package format="2">
  <name>package00000496</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000350</depend>
  <depend>package00001083</depend>
  <depend>package00000187</depend>
  <depend>package00000042</depend>
  <depend>package00000219</depend>
  <depend>package00000220</depend>
  <depend>package00000210</depend>
  <depend>package00000216</depend>
  <depend>package00000329</depend>
  <depend>package00001059</depend>
  <depend>package00000237</depend>
  <depend>package00000185</depend>
  <depend>package00000186</depend>
  <depend>package00000116</depend>
  <depend>package00001032</depend>
  <depend>package00001028</depend>
  <depend>package00000286</depend>
  <depend>package00001053</depend>
  <depend>package00001046</depend>
  <depend>package00001111</depend>
  <depend>package00001084</depend>
  <depend>package00001080</depend>
  <depend>package00000217</depend>
  <depend>package00000218</depend>
  <depend>package00001051</depend>
  <depend>package00000117</depend>
  <depend>package00000291</depend>
  <depend>package00000128</depend>
  <depend>package00001044</depend>
  <build_depend>package00000002</build_depend>
  <exec_depend>package00000410</exec_depend>
  <exec_depend>package00001057</exec_depend>
</package>
