<?xml version="1.0"?>
<package format="2">
  <name>package00000507</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <exec_depend>package00001057</exec_depend>
  <exec_depend>package00000496</exec_depend>
  <exec_depend>package00000344</exec_depend>
  <exec_depend>package00001055</exec_depend>
  <exec_depend>package00000749</exec_depend>
  <exec_depend>package00000410</exec_depend>
</package>
