<?xml version="1.0"?>
<package format="2">
  <name>package00000737</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000033</depend>
  <depend>package00000186</depend>
  <depend>package00000204</depend>
  <depend>package00000203</depend>
  <depend>package00000286</depend>
  <depend>package00000229</depend>
  <depend>package00000205</depend>
  <depend>package00000067</depend>
  <build_depend>package00000002</build_depend>
</package>
