<?xml version="1.0"?>
<package format="2">
  <name>package00001033</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000365</depend>
  <depend>package00000396</depend>
  <depend>package00000405</depend>
  <depend>package00000228</depend>
  <depend>package00000403</depend>
  <depend>package00000038</depend>
  <depend>package00000286</depend>
  <depend>package00001049</depend>
  <depend>package00000128</depend>
  <depend>package00000067</depend>
  <build_depend>package00000002</build_depend>
</package>
