<?xml version="1.0"?>
<package format="2">
  <name>package00001036</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000203</depend>
  <depend>package00000033</depend>
  <depend>package00001028</depend>
  <depend>package00000042</depend>
  <depend>package00000117</depend>
  <depend>package00000121</depend>
  <depend>package00001037</depend>
  <depend>package00001038</depend>
  <depend>package00001039</depend>
  <depend>package00000737</depend>
  <depend>package00000067</depend>
  <build_depend>package00000002</build_depend>
</package>
