<?xml version="1.0"?>
<package format="2">
  <name>package00001038</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <depend>package00000204</depend>
  <depend>package00000203</depend>
  <depend>package00000117</depend>
  <depend>package00001049</depend>
  <depend>package00001048</depend>
  <depend>package00000121</depend>
  <depend>package00001037</depend>
  <depend>package00001050</depend>
  <depend>package00000086</depend>
  <depend>package00000205</depend>
  <depend>package00000067</depend>
  <build_depend>package00000002</build_depend>
</package>
