<?xml version="1.0"?>
<package format="2">
  <name>package00001040</name>
  <version>1.0.0</version>
  <description>Sample package for benchmark</description>
  <maintainer email="someone@somewhere.there">Some User</maintainer>
  <license>BSD</license>
  <exec_depend>package00000280</exec_depend>
  <exec_depend>package00000802</exec_depend>
  <exec_depend>package00000546</exec_depend>
  <exec_depend>package00000746</exec_depend>
  <exec_depend>package00000344</exec_depend>
  <exec_depend>package00000749</exec_depend>
  <exec_depend>package00001041</exec_depend>
  <exec_depend>package00001042</exec_depend>
  <exec_depend>package00000651</exec_depend>
  <exec_depend>package00000842</exec_depend>
  <exec_depend>package00001043</exec_depend>
  <exec_depend>package00000422</exec_depend>
</package>
